# cartas-de-controle-para-dados-autocorrelacionados

./: .gitignore  .nojekyll  ARMA_1_1.R  ARMA_1_1_controle_coeficientes_bootstrap.R  ARMA_1_1_mc_paralelo.R  AR_controle_coeficientes_bootstrap.R  DESCRIPTION  EM-linear-regression.R  MA_2_controle_coeficientes_bootstrap.R  README.md  _old-controle-beta-ar.Rmd  beta-ar-ceq.rmd  cartas-de-controle-para-dados-autocorrelacionados.Rproj  cartas_de_controle.py  cartas_de_controle_opt.py  ceq-residuos.html  ceq-residuos.qmd  coeficientes_bootstrap.R  controle-ar-1.Rmd  controle-ar-1.html  controle-beta-ar.Rmd  dados_simulacao_ar.xlsx  df_ar.xlsx  df_bar.xlsx  diagrama_t2_hotelling.tex  distribuicao-beta.html  distribuicao-beta.qmd  ewma-ar.Rmd  ewma-ar.nb.html  ewma-bar.Rmd  ewma-residuos.Rmd  index.html  index.qmd  pyproject.toml  robots.txt  search.json  sitemap.xml  teste.Rmd  vcov-regressao-linear.Rmd
.github/workflows/: main.yml
R/: arma-multimodelo.R  arma.R  bootstrap-multimodelo.R  bootstrap.R  controle-t2_hotelling.R  meu_arma.R  monte_carlo.R  paralelizacao.R  utils.R
cache/: ewmaar-lambda-otimo.rds  teste-montecarlo.rds
estudos/comparacao-entre-truncagem-e-transformacao/: codigo.R
estudos/comportamento-rho/: implementacao-rho.R
legacy/: AR_2_controle_coeficientes_bootstrap.R  _old-controle-beta-ar.Rmd  _quarto.yml  beta-ar-ceq.Rmd  coeficientes_bootstrap.R  outliers.Rmd  var_bar.R
scripts/: amostras.R  arima_funcs.R  cartas_de_controle.py  plot_themes.R  renderiza_roxygen.R  run_tests.R
tests/: testthat.R
web/: modal.html  styles.css
(+41 files in other folders)
