[project]
name = "cartas-de-controle-para-dados-autocorrelacionados"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "notebook>=7.5.5",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "pingouin>=0.6.1",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "scipy-stubs>=1.17.1.3",
    "statsmodels>=0.14.6",
]

[dependency-groups]
dev = [
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
"" = "."

[tool.setuptools]
packages = [
    "scripts"
]

[project.scripts]
main = "scripts.cartas_de_controle:executa"
